--- a/config/product-layout.yaml
+++ b/config/product-layout.yaml
@@ -88,7 +88,7 @@ featuredFeatures:
         path: "/v1/profile"
   - title: Semi-Integrated Terminals
     groupName: Card-Present
-    description: Use the CardPointe Integrated Terminal API to integrate P2PE-validated, card-present payments to your point-of-cale (POS) application.
+    description: Use the CardPointe Integrated Terminal API to integrate P2PE-validated, card-present payments to your point-of-sale (POS) application.
     featured: true
     tags: ["card-present", "semi-integration", "P2PE"]
     relatedDocs:
