--- a/config/document-explorer-definition.yaml
+++ b/config/document-explorer-definition.yaml
@@ -30,7 +30,7 @@
 
 - sections:
   - title: Getting Started
-    link: docs/getting-started.md
+    link: docs/get-started.md
 - sections:
   - title: CardPointe Gateway
     sections:
