--- a/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
+++ b/reference/1.0.0/CoPilotAPI/CoPilotAPI.yaml
@@ -3861,6 +3861,7 @@ components:
       maxLength: 19
       example: 999
     merchant:
+      x-model-version: 1.0
       items:
         properties:
           salesCodes:
