--- a/reference/1.0.0/CardPointeGatewayAPI/CardPointeGatewayAPI.yaml
+++ b/reference/1.0.0/CardPointeGatewayAPI/CardPointeGatewayAPI.yaml
@@ -391,7 +391,7 @@ paths:
           content:  
             application/json:
               schema: {$ref: '#/components/schemas/BadRequestError'}
-  /cardconnect/rest/inquireByOrderdid:
+  /cardconnect/rest/inquireByOrderid:
     get:
       tags:
         - inquireByOrderid Endpoint Definition
@@ -410,19 +410,19 @@ paths:
         
         If you have multiple MIDs and do not know which MID was used in the original transaction, you can omit the set parameter from the end of the request to optionally inquire on the order ID across all MIDs on the site.
       parameters:
-      - in: query
+      - in: path
         name: merchid
         required: true
         schema:
           $ref: '#/components/schemas/merchid'
           description: The MID from the original authorization.
-      - in: query
+      - in: path
         name: orderid
         required: true
         schema:
           $ref: '#/components/schemas/orderId'
           description: The Order ID from the original authorization.
-      - in: query
+      - in: path
         name: set
         required: false
         schema:
@@ -450,7 +450,7 @@ paths:
           content:  
             application/json:
               schema: {$ref: '#/components/schemas/BadRequestError'}
-  /cardconnect/rest/voidByOrderdid:
+  /cardconnect/rest/voidByOrderid:
     get:
       tags:
         - voidByOrderid Endpoint Definition
@@ -467,19 +467,19 @@ paths:
         
         It is strongly recommended that you use a unique order ID for every transaction, if you are using order IDs. Doing so allows you to more easily and accurately retrieve data on all transactions.
       parameters:
-      - in: query
+      - in: path
         name: merchid
         required: true
         schema:
           $ref: '#/components/schemas/merchid'
           description: The MID from the original authorization.
-      - in: query
+      - in: path
         name: orderid
         required: true
         schema:
           $ref: '#/components/schemas/orderId'
           description: The Order ID from the original authorization.
-      - in: query
+      - in: path
         name: amount
         required: false
         schema:
